[gd_scene load_steps=13 format=3 uid="uid://dytiw37k7yv7p"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_7k4f7"]
[ext_resource type="Texture2D" uid="uid://2ix18i6my7gk" path="res://assets/demo-background.jpg" id="3_2atnp"]
[ext_resource type="FontFile" uid="uid://d0rv36s7vgfl7" path="res://assets/Arcades Italic.ttf" id="4_0ukja"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fo6je"]
texture = ExtResource("3_2atnp")
modulate_color = Color(1, 1, 1, 0.521569)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_joo1q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ts7k"]
bg_color = Color(0.76662, 0.76662, 0.76662, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.419608)
shadow_size = 5
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rp1dp"]
bg_color = Color(0.419813, 0.419813, 0.419813, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.419608)
shadow_size = 5
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rpuc7"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.419608)
shadow_size = 5
shadow_offset = Vector2(0, 4)

[sub_resource type="LabelSettings" id="LabelSettings_oel8t"]
line_spacing = 5.0
font_size = 45

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tcugl"]
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="LabelSettings" id="LabelSettings_gt7lm"]
font_size = 26

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r5s1h"]

[node name="Pause" type="Control"]
process_mode = 2
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7k4f7")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 246.0
offset_top = 39.0
offset_right = 1398.0
offset_bottom = 1063.0
scale = Vector2(0.6, 0.5)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_fo6je")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_direction = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = 40.0
offset_right = 196.0
offset_bottom = 286.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
theme_override_constants/separation = 26

[node name="controls" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_joo1q")
theme_override_styles/hover = SubResource("StyleBoxFlat_6ts7k")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rp1dp")
theme_override_styles/normal = SubResource("StyleBoxFlat_rpuc7")
text = "Controls
"

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_joo1q")
theme_override_styles/hover = SubResource("StyleBoxFlat_6ts7k")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rp1dp")
theme_override_styles/normal = SubResource("StyleBoxFlat_rpuc7")
text = "Resume
"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_joo1q")
theme_override_styles/hover = SubResource("StyleBoxFlat_6ts7k")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rp1dp")
theme_override_styles/normal = SubResource("StyleBoxFlat_rpuc7")
text = "Restart
"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_joo1q")
theme_override_styles/hover = SubResource("StyleBoxFlat_6ts7k")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rp1dp")
theme_override_styles/normal = SubResource("StyleBoxFlat_rpuc7")
text = "Exit
"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.0
offset_top = -245.0
offset_right = 255.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("4_0ukja")
theme_override_font_sizes/font_size = 60
text = "Game Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 828.0
offset_top = 80.0
offset_right = 1128.0
offset_bottom = 109.0

[node name="Label3" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 195.0
offset_top = -287.0
offset_right = 512.0
offset_bottom = -196.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("4_0ukja")
theme_override_font_sizes/font_size = 60
text = "Volume"
label_settings = SubResource("LabelSettings_oel8t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Controls" type="Panel" parent="."]
process_mode = 3
visible = false
layout_mode = 0
offset_left = 268.0
offset_top = 161.0
offset_right = 784.0
offset_bottom = 603.0
theme_override_styles/panel = SubResource("StyleBoxFlat_tcugl")

[node name="BackButton" type="Button" parent="Controls"]
layout_mode = 0
offset_right = 114.0
offset_bottom = 42.0
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_joo1q")
theme_override_styles/hover = SubResource("StyleBoxFlat_6ts7k")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rp1dp")
theme_override_styles/normal = SubResource("StyleBoxFlat_rpuc7")
text = "Back
"

[node name="ControlsLabel" type="Label" parent="Controls"]
layout_mode = 0
offset_right = 796.0
offset_bottom = 565.0
text = "                                                   																						Controls


  move left:         A
  move right:       D
  slide:                  S
  jump:                 Spacebar    
  shoot Right:      >  (right arrow key)
  shoot up:           ^ (up arrow key)
  Use sheild:         C
"
label_settings = SubResource("LabelSettings_gt7lm")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = 368.0
offset_top = 162.0
offset_right = 708.0
offset_bottom = 340.0

[node name="instructions labe" type="Label" parent="Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -213.0
offset_top = -127.0
offset_right = 240.0
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = -1
theme_override_constants/shadow_offset_y = 10
theme_override_font_sizes/font_size = 17
theme_override_styles/normal = SubResource("StyleBoxTexture_r5s1h")
text = "Survival Instruction:

-Don't touch left wall 
-Don't get hit by enemy projectiles 
-Stay alive!!!!

"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="button_down" from="VBoxContainer/RestartButton" to="." method="_on_start_button_button_down"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Controls/BackButton" to="." method="_on_back_button_pressed"]
